# HERMES_qp_robot

src/bipedLocomotionLib/: .gitignore  CMakeLists.txt  package.xml
src/bipedLocomotionLib/doc/: Doxyfile.in
src/bipedLocomotionLib/python/: ati_sensor.py  cog_iros14.py  cog_plot_icra.py  cog_tracking.py  plot_failure_hints.py
src/bipedLocomotionLib/src/opengl/: capture_opengl.cpp  capture_opengl.h  display_kinematics.c  display_kinematics.h  drawUtils.cpp  drawUtils.h
src/bipedLocomotionLib/src/task/: HInvDynExample_old.cpp
src/bipedLocomotionLib/src/task/controllers/: HInvDynExample.cpp  HInvDynExample.cpp.bvk  HInvDynExample.h  HInvDynHands.cpp  balance_controller.cpp  balance_controller.h  biped_controller.cpp  biped_controller.h  walking_controller.cpp  walking_controller.h
src/bipedLocomotionLib/src/task/tasks/: .gravity_compensation.cpp.swp  .traj_track_task.cpp.swm  .traj_track_task.cpp.swn  .traj_track_task.cpp.swo  .traj_track_task.cpp.swp  HInvDynExample_task.cpp  balance_task.cpp  cga_imu_sensor.cpp  cog_force_utils.cpp  fb_sine_task.cpp  gravity_compensation.cpp  initUserTasks_bipedLocomotionLib.c  joint_calibration_task.cpp  mass_estimation.cpp  test_inverse_kinematics.cpp  torque_sine_task.cpp  traj_track_task.cpp  walking_task.cpp  zero_torque_task.cpp
src/bipedLocomotionLib/src/task/utils/: BipedalTaskComposer.cpp  BipedalTaskComposer.h  BipedalTaskComposer_precompiles.cpp  FootContactHandlerHermes.cpp  FootContactHandlerHermes.h  capture_point_helper.cpp  capture_point_helper.h  inverse_kinematics.cpp  inverse_kinematics.h  min_jerk_generator.cpp  min_jerk_generator.h  (+2 more)
src/cb_communication/: .gitignore  CMakeLists.txt  gdc_card_state.txt  gdc_card_state_Nov14.txt  gdc_card_status.txt  gdc_card_status2.txt  package.xml
src/cb_communication/config/: gdc_config_athena.cf  hermes_rtnet
src/cb_communication/deprecated/config/: arp-ethers-host  arp-ethers-net1  arp-ethers-net4  initialSDCState_192.168.1.0  initialSDCState_192.168.2.0  initialSDCState_192.168.5.0  loadSerialDeviceModule.sh  setRoutes.sh  shutdownNet.sh  startRTnet.sh
src/cb_communication/deprecated/gdc/: CB_comm_rtnet_main.cpp  SL2GDCInterface.cpp
src/cb_communication/deprecated/include/: SL2GDCInterface.h  SL_user_fake.h  m3dmg-local.h  m3dmg.h  m3dmgAdapter.h  m3dmgErrors.h  m3dmgSerial.h  m3dmgUtils.h
src/cb_communication/deprecated/prefs/: loopTester_sample.default
src/cb_communication/deprecated/serial_common/: m3dmg.c  m3dmgAdapter.c  m3dmgSerialLinux.c  m3dmgUtils.c
src/cb_communication/deprecated/serial_main/: CBcomm_serial_main.cpp
src/cb_communication/doc/: Doxyfile
src/cb_communication/include/gdc_common/: FootSensorMsg.h  FootSensorState.h  GDCMsg.h  GDCNetwork.h  GDCState.h  network_definitions.h
src/cb_communication/include/imu_common/: 3dmgx2.h  ImuInterface.h  ImuInterfaceNonRT.h  ImuInterfaceNonRTStream.h  microstrain_3dmgx3_25.h
src/cb_communication/matlab/.svn/: entries
src/cb_communication/matlab/SDCStatesTools/: generateVisual.m  getIndexesFromName.m  loadData.m  saveData.m  showFinalSDCConfiguration.m  showInitialSDCConfiguration.m  show_sdc_paramsScript.m  visual1.m  visualCmd.m
src/cb_communication/matlab/monitoring_network/: analyse.m
src/cb_communication/python/: GdcCardStatus.py  gdcCardUi.py  mainwindowUi.py  plot_gdc_data.py  plot_imu_data.py  plot_pt_data.py
src/cb_communication/sarcos_bin/: Flash Loader.xml  README
src/cb_communication/src/gdc_common/: FootSensorMsg.cpp  FootSensorState.cpp  GDCMsg.cpp  GDCNetwork.cpp  GDCState.cpp  gdc_utils.cpp
src/cb_communication/src/imu_common/: 3dmgx2.cpp  ImuInterface.cpp  ImuInterfaceNonRT.cpp  ImuInterfaceNonRTStream.cpp  microstrain_3dmgx3_25.cpp
src/cb_communication/src/programs/: imu_non_rt_test.cpp  imu_test_loop.cpp  record_min_max.cpp  save_gdc_card_state.cpp  test_communication_loop.cpp  test_periodic_loop.cpp
src/floatingBaseTools/: .gitignore  CMakeLists.txt  README.txt  package.xml  setup.py
src/floatingBaseTools/cmake/: floating_base_tools.cmake
src/floatingBaseTools/deprecated/: FBInverseDynamics.cpp_old  FBInverseDynamics.h_old  InverseDynamics.cpp_old  InverseDynamics.h_old  NaturalInverseDynamics.cpp_old  NaturalInverseDynamics.h_old  OptimalInverseDynamics.cpp_old  OptimalInverseDynamics.h_old  SentisInverseDynamics.cpp_old  SentisInverseDynamics.h_old  dbg_contact_helper.cpp  parallelizable_kinematics_utilities.h
src/floatingBaseTools/doc/: Doxyfile.in
src/floatingBaseTools/include/: CartesianForceCtrl.h  CartesianForceCtrl.hh  CartesianPDCmd.h  CartesianPositionCtrl.h  CartesianPositionCtrl.hh  ConfigUtils.h  ContactHelper.h  CvxopQp.h  CvxopQp.hh  DynamicsConstraint.h  DynamicsConstraint.hh  EigenQpSolver.h  FileSequence.h  FixedSizeEigenQpSolver.h  FixedSizeEigenQpSolver.hh  FloatingBaseImpedanceCtrl.h  FloatingBaseImpedanceCtrl.hh  FloatingBaseKinematics.h  GeometryUtils.h  HierarchAffineCost.h  HierarchInverseDynamics.h  HierarchInverseDynamics.hh  JointPositionCtrl.h  JointPositionCtrl.hh  JointSpaceCtrl.h  JointSpaceCtrl.hh  KinematicsEigen.h  MomentumComputation.h  MomentumRateCtrl.h  MomentumRateCtrl.hh  NonRtEiquadprog.h  NonRtEiquadprog.hh  OptimalInverseDynamicsEigen.h  RtEiquadprog.h  RtEiquadprog.hh  RtHierarchicalTask.h  RtHierarchicalTask.hh  RtHierarchicalTask2.h  RtHierarchicalTask2.hh  RtMatrixX.h  (+6 more)
src/floatingBaseTools/src/: CartesianPDCmd.cpp  ConfigUtils.cpp  ContactHelper.cpp  EigenQpSolver.cpp  FileSequence.cpp  FloatingBaseKinematics.cpp  GeometryUtils.cpp  KinematicsEigen.cpp  MomentumComputation.cpp  OptimalInverseDynamicsEigen.cpp  RtMatrixX.cpp  floatingBaseToolsRobotInfo.cpp
src/floatingBaseTools/src/py_floating_base_tools/: analyzeQPpSolver.py  hierarchProblemset.py  lexmin.py  linalgTools.py  logHandling.py  momentum_lqr.py
src/floatingBaseTools/tests/: solve_lexmin.cpp  test_CvxopQp.cpp
src/sl_config/: CMakeLists.txt  package.xml
src/sl_config/cmake/: FindLibRt.cmake  FindLibedit.cmake  sl_config.cmake  sl_macros.cmake
src/sl_config/env-hooks/: 20.sl_config.sh.em
src/sl_config/scripts/: get_machtype.bash
(+99 files in other folders)
