<?xml version="1.0"?>
<package>
  <name>biped_locomotion_lib</name>
  <version>1.0.0</version>
  <description>biped_locomotion_lib</description>
  <author email="aherzog@tuebingen.mpg.de">Alexander Herzog</author>
  <maintainer email="aherzog@tuebingen.mpg.de">Alexander Herzog</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sl</build_depend>
  <build_depend>floating_base_tools</build_depend>
  <build_depend>hermes_lower</build_depend>
  <build_depend>hermes_full</build_depend>
  <build_depend>athena</build_depend>
  <build_depend>py_momentum_mpc</build_depend>
  
  <run_depend>sl</run_depend>
  <run_depend>floating_base_tools</run_depend>
  
  <export>
  </export>
</package>
