<?xml version="1.0"?>
<package>
  <name>hermes_communication_tools</name>
  <version>1.0.0</version>
  <description>hermes_communication_tools</description>
  <license>TODO</license>
  <author email="ludovic.righetti@tuebingen.mpg.de">Ludovic Righetti</author>
  <maintainer email="aherzog@tuebingen.mpg.de">Alexander Herzog</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sl_config</build_depend>
  <build_depend>sl</build_depend>
  <build_depend>xenomai_ros</build_depend>
  
  <run_depend>sl</run_depend>
  <run_depend>xenomai_ros</run_depend>

  <export>
  </export>
</package>
