<?xml version="1.0"?>
<package>
  <name>sl_config</name>
  <version>1.0.0</version>
  <description>sl_config</description>
  <maintainer email="kalakris@usc.edu">kalakris</maintainer>
  <author email="kalakris@usc.edu">kalakris</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
